tests/error/double_sleep.c
// fail "Undeclared identifier."

int sleeping_on_bar(bar *asd){
   
}

int sleeping_on_bar(bar *asd){
   
}

